<resources>
    <string name="app_name">Device Connect Manager</string>
    <string name="activity_settings_server_on_off">Device Connect Manager</string>
    <string name="activity_settings_observer">Monitoring Service</string>
    <string name="activity_settings_allow_external_ip">Allow External IP</string>
    <string name="activity_settings_server_keyword">Keyword</string>
    <string name="activity_settings_server_settings">Settings</string>
    <string name="activity_settings_dconnect_enabled">On</string>
    <string name="activity_settings_dconnect_disabled">Off</string>
    <string name="activity_settings_default_keyword"></string>
    <string name="activity_settings_keyword">Keyword</string>
    <string name="activity_settings_ssl">SSL</string>
    <string name="activity_settings_ssl_enabled">SSL Enabled</string>
    <string name="activity_settings_ssl_disabled">SSL Disabled</string>
    <string name="activity_settings_host">Host</string>
    <string name="activity_settings_port">Port</string>
    <string name="activity_settings_default_host">localhost</string>
    <string name="activity_settings_default_port">4035</string>
    <string name="activity_settings_local_oauth">Local OAuth</string>
    <string name="activity_settings_dconn_enabled">Enabled</string>
    <string name="activity_settings_dconn_disabled">Disabled</string>
    <string name="activity_settings_terms_of_service">Terms of Service</string>
    <string name="activity_settings_privacy_policy">Privacy Policy</string>
    <string name="activity_settings_open_source_licenses">Open Source Licenses</string>
    <string name="activity_settings_open_source_licenses_summary">Legal information about licenses</string>
    <string name="activity_settings_app_infomation_summary">Version %1$s</string>
    <string name="activity_settings_about">About</string>
    <string name="activity_settings_general">General</string>
    <string name="activity_settings_not_logged_in">Not logged in yet</string>
    <string name="activity_settings_docomo_account">docomo ID</string>
    <string name="key_settings_about_appinfo">settings_about_appinfo</string>
    <string name="key_settings_dconn_server_on_off">settings_dconn_server_on_off</string>
    <string name="key_settings_dconn_observer_on_off">settings_dconn_observer_on_off</string>
    <string name="key_settings_dconn_keyword">settings_dconn_server_keyword</string>
    <string name="key_settings_dconn_allow_external_ip">settings_dconn_allow_external_ip</string>
    <string name="key_settings_dconn_white_list">settings_dconn_ip_white_list</string>
    <string name="key_settings_dconn_ssl">settings_dconn_ssl</string>
    <string name="key_settings_dconn_host">settings_dconn_host</string>
    <string name="key_settings_dconn_port">settings_dconn_port</string>
    <string name="key_settings_dconn_local_oauth">settings_dconn_local_oauth</string>
    <string name="key_settings_dconn_observation_interval">key_settings_dconn_observation_interval</string>
    <string name="key_settings_open_source_licenses">settings_open_source_licenses</string>
    <string name="key_settings_about_privacypolicy">settings_about_privacypolicy</string>
    <string name="key_settings_about_tos">settings_about_tos</string>
    <string name="activity_keyword">Keyword</string>
    <string name="activity_keyword_ok">OK</string>
    <string name="activity_warning">警告</string>
    <string name="activity_warning_mess">d-Connect以外のアプリケーションがポートを利用しているため、d-Connectを起動することができません。</string>
    <string name="activity_warning_ok">OK</string>
    <string name="activity_warning_disable">次から表示しない</string>
    <string name="contents"></string>
    <string name="action_settings">Settings</string>
    <string name="action_menu">Menu</string>
    <string name="action_search">Network Service Discovery</string>
    <string name="action_access_token">Request AccessToken</string>
    <string name="action_input_session_key">Input SessionKey</string>
    <string name="discovery">network_service_discovery</string>
    <string name="http_method">HTTP Method:</string>
    <string name="profile">Profile:</string>
    <string name="interfaces">Interfaces:</string>
    <string name="attribute">Attribute:</string>
    <string name="deviceid">Device ID:</string>
    <string name="send_request">Send</string>
    <string name="select_or_url">Parameter or URL</string>
    <string name="url_hint1">param1=xxx&amp;param2=yyy</string>
    <string name="url_hint2">/profile/interfaces/attribute?param1=xxx</string>
    <string name="content_description"></string>
    <string name="websocket_open">WebSocket Open</string>
    <string name="websocket_close">WebSocket Close</string>
    <string name="authorization_profile">/authorization</string>
    <string-array name="authorization_interface_list">
        <item></item>
    </string-array>
    <string-array name="authorization_attrib_list">
        <item></item>
        <item>create_client</item>
        <item>request_accesstoken</item>
    </string-array>
    <string name="network_service_discovery_profile">/network_service_discovery/getnetworkservices</string>
    <string-array name="network_service_discovery_interface_list">
        <item></item>
    </string-array>
    <string-array name="network_service_discovery_attrib_list">
        <item></item>
        <item>getnetworkservices</item>
        <item>onservicechange</item>
    </string-array>
    <string name="system_profile">system</string>
    <string-array name="system_interface_list">
        <item></item>
        <item>device</item>
    </string-array>
    <string-array name="system_attrib_list">
        <item></item>
        <item>wakeup</item>
        <item>keyword</item>
        <item>events</item>
    </string-array>
    <string name="file_profile">file</string>
    <string-array name="file_interface_list">
        <item></item>
    </string-array>
    <string-array name="file_attrib_list">
        <item></item>
        <item>send</item>
        <item>receive</item>
        <item>list</item>
        <item>remove</item>
        <item>mkdir</item>
        <item>rmdir</item>
    </string-array>
    <string name="mediastream_recording_profile">mediastream_recording</string>
    <string-array name="mediastream_recording_interface_list">
        <item></item>
    </string-array>
    <string-array name="mediastream_recording_attrib_list">
        <item></item>
        <item>mediarecorder</item>
        <item>takephoto</item>
        <item>record</item>
        <item>pause</item>
        <item>resume</item>
        <item>stop</item>
        <item>mutetrack</item>
        <item>unmutetrack</item>
        <item>options</item>
        <item>onphoto</item>
    </string-array>
    <string name="phone_profile">phone</string>
    <string-array name="phone_interface_list">
        <item></item>
    </string-array>
    <string-array name="phone_attrib_list">
        <item></item>
        <item>call</item>
        <item>set</item>
    </string-array>
    <string name="file_descriptor_profile">file_descriptor</string>
    <string-array name="file_descriptor_interface_list">
        <item></item>
    </string-array>
    <string-array name="file_descriptor_attrib_list">
        <item></item>
        <item>open</item>
        <item>close</item>
        <item>read</item>
        <item>write</item>
    </string-array>
    <string name="proximity_profile">rssi</string>
    <string-array name="proximity_interface_list">
        <item></item>
    </string-array>
    <string-array name="proximity_attrib_list">
        <item></item>
        <item>ondeviceproximity</item>
        <item>onuserproximity</item>
    </string-array>
    <string name="settings_profile">settings</string>
    <string-array name="settings_interface_list">
        <item></item>
        <item>sound</item>
        <item>display</item>
    </string-array>
    <string-array name="settings_attrib_list">
        <item></item>
        <item>volume</item>
        <item>date</item>
        <item>sleep</item>
        <item>light</item>
    </string-array>
    <string name="vibration_profile">vibration</string>
    <string-array name="vibration_interface_list">
        <item></item>
    </string-array>
    <string-array name="vibration_attrib_list">
        <item></item>
        <item>vibrate</item>
    </string-array>
    <string name="notification_profile">notification</string>
    <string-array name="notification_interface_list">
        <item></item>
    </string-array>
    <string-array name="notification_attrib_list">
        <item></item>
        <item>notify</item>
    </string-array>
    <string name="battery_profile">battery</string>
    <string-array name="battery_interface_list">
        <item></item>
    </string-array>
    <string-array name="battery_attrib_list">
        <item></item>
        <item>charging</item>
        <item>level</item>
        <item>onchargingchange</item>
        <item>onbatterychange</item>
    </string-array>
    <string name="media_player_profile">media_player</string>
    <string-array name="media_player_interface_list">
        <item></item>
    </string-array>
    <string-array name="media_player_attrib_list">
        <item></item>
        <item>media</item>
        <item>media_list</item>
        <item>play_status</item>
        <item>play</item>
        <item>stop</item>
        <item>pause</item>
        <item>resume</item>
        <item>seek</item>
        <item>volume</item>
        <item>mute</item>
        <item>onstatuschange</item>
    </string-array>
    <string name="connect_recording_profile">connect</string>
    <string-array name="connect_interface_list">
        <item></item>
        <item>wifi</item>
        <item>bluetooth</item>
        <item>nfc</item>
    </string-array>
    <string-array name="connect_attrib_list">
        <item></item>
        <item>discoverable</item>
    </string-array>
    <string name="deviceorientation_profile">deviceorientation</string>
    <string-array name="deviceorientation_interface_list">
        <item></item>
    </string-array>
    <string-array name="deviceorientation_attrib_list">
        <item></item>
        <item>ondeviceorientation</item>
    </string-array>
    <string name="light_profile">light</string>
    <string-array name="light_interface_list">
        <item></item>
        <item>group</item>
    </string-array>
    <string-array name="light_attrib_list">
        <item></item>
        <item>group</item>
        <item>create</item>
        <item>clear</item>
    </string-array>
    <string name="camera_profile">camera</string>
    <string-array name="camera_interface_list">
        <item></item>
    </string-array>
    <string-array name="camera_attrib_list">
        <item></item>
        <item>zoom</item>
    </string-array>
    <string name="dice_profile">camera</string>
    <string-array name="dice_interface_list">
        <item></item>
    </string-array>
    <string-array name="dice_attrib_list">
        <item></item>
        <item>ondice</item>
        <item>onmagnetometer</item>
    </string-array>
    <string name="temperature_profile">camera</string>
    <string-array name="temperature_interface_list">
        <item></item>
    </string-array>
    <string-array name="temperature_attrib_list">
        <item></item>
    </string-array>
    <string name="drive_controller_profile">drive_controller</string>
    <string-array name="drive_controller_interface_list">
        <item></item>
    </string-array>
    <string-array name="drive_controller_attrib_list">
        <item>move</item>
        <item>stop</item>
        <item>rotate</item>
    </string-array>
    <string name="remote_controller_profile">remote_controller</string>
    <string-array name="remote_controller_interface_list">
        <item></item>
    </string-array>
    <string-array name="remote_controller_attrib_list">
        <item></item>
    </string-array>
    <string name="sphero_profile">sphero</string>
</resources>