<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/activity_settings_server_on_off" >
        <SwitchPreference
            android:key="@string/key_settings_dconn_server_on_off"
            android:summaryOff="@string/activity_settings_dconnect_disabled"
            android:summaryOn="@string/activity_settings_dconnect_enabled"
            android:title="@string/app_name" />
        <SwitchPreference
            android:key="@string/key_settings_dconn_observer_on_off"
            android:summaryOff="@string/activity_settings_dconnect_disabled"
            android:summaryOn="@string/activity_settings_dconnect_enabled"
            android:title="@string/activity_settings_observer" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/activity_settings_server_keyword" >
        <EditTextPreference
            android:defaultValue="@string/activity_settings_default_keyword"
            android:key="@string/key_settings_dconn_keyword"
            android:summary="@string/activity_settings_default_keyword"
            android:title="@string/activity_settings_keyword" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/activity_settings_server_settings" >
        <CheckBoxPreference
            android:key="@string/key_settings_dconn_ssl"
            android:summaryOff="@string/activity_settings_ssl_disabled"
            android:summaryOn="@string/activity_settings_ssl_enabled"
            android:title="@string/activity_settings_ssl" />

        <EditTextPreference
            android:defaultValue="@string/activity_settings_default_host"
            android:key="@string/key_settings_dconn_host"
            android:summary="@string/activity_settings_default_host"
            android:title="@string/activity_settings_host" />
        <EditTextPreference
            android:defaultValue="@string/activity_settings_default_port"
            android:inputType="number"
            android:key="@string/key_settings_dconn_port"
            android:summary="@string/activity_settings_default_port"
            android:title="@string/activity_settings_port" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_settings_dconn_local_oauth"
            android:summaryOff="@string/activity_settings_dconn_disabled"
            android:summaryOn="@string/activity_settings_dconn_enabled"
            android:title="@string/activity_settings_local_oauth" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_settings_dconn_allow_global_ip"
            android:summaryOff="@string/activity_settings_dconn_disabled"
            android:summaryOn="@string/activity_settings_dconn_enabled"
            android:title="@string/activity_settings_allow_global_ip" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/activity_settings_about" >
        <PreferenceScreen
            android:key="@string/key_settings_open_source_licenses"
            android:summary="@string/activity_settings_open_source_licenses_summary"
            android:title="@string/activity_settings_open_source_licenses" />
        <PreferenceScreen
            android:key="@string/key_settings_about_tos"
            android:title="@string/activity_settings_terms_of_service" />
        <PreferenceScreen
            android:key="@string/key_settings_about_privacypolicy"
            android:title="@string/activity_settings_privacy_policy" />
        <PreferenceScreen
            android:key="@string/key_settings_about_appinfo"
            android:summary="@string/activity_settings_app_infomation_summary"
            android:title="@string/app_name" />
    </PreferenceCategory>

</PreferenceScreen>